--- a/index.html
+++ b/index.html
@@ -2,191 +2,187 @@
 <html lang="ru">
 
 <head>
-	<meta charset="utf-8">
-	<title>Gllacy</title>
+    <meta charset="utf-8">
+    <title>Gllacy</title>
 </head>
 
 <body>
-	<header class="main-header">
-		<img src="" width="" height="" alt="logo">
-		<nav class="main-navigation">
-			<ul>
-				<li>
-					<a href="#">Каталог</a>
-				</li>
-				<li>
-					<a href="#">Доставка и оплата</a>
-				</li>
-				<li>
-					<a href="#">О компании</a>
-				</li>
-			</ul>
-		</nav>
-		<div class="user-block">
-			<div class="user-block-search">
-				<a class="btn-search" href="#">Поиск</a>
-			</div>
-			<div class="user-block-login">
-				<a class="btn-login" href="#">Вход</a>
-			</div>
-			<div class="user-block-cart">
-				<a class="btn-cart" href="#">Пусто</a>
-			</div>
-		</div>
-	</header>
-	<main>
-		<div class="container">
-			<div class="work-info">
-				<div>с 10 до 20, ежедневно</div>
-				<div>8 812 450-25-25</div>
-			</div>
-			<section class="main-banner">
-				<div class="main-banner-slide">
-					<div>Крем-брюле и пломбир с малиновым джемом</div>
-					<a class="main-banner-btn" href="#">Давайте оба!</a>
-				</div>
-				<div class="main-banner-slide">
-					<div>Крем-брюле и пломбир с малиновым джемом</div>
-					<a class="main-banner-btn" href="#">Давайте оба!</a>
-				</div>
-				<div class="main-banner-slide">
-					<div>Крем-брюле и пломбир с малиновым джемом</div>
-					<a class="main-banner-btn" href="#">Давайте оба!</a>
-				</div>
-				<div class="main-banner-buttons">
-					<span id="main-banner-btn1 main-banner-btn-active"></span>
-					<span id="main-banner-btn2"></span>
-					<span id="main-banner-btn3"></span>
-				</div>
-			</section>
-			<section class="main-banners">
-				<div class="main-banners-item">
-					<h2>Малинка даром!</h2>
-					<p>
-						При покупке 2кг любого фруктового мороженого, добавим в ваш заказ банку малинового варенья бесплатно.
-					</p>
-					<a class="btn">Хочу варенье!</a>
-				</div>
-				<div class="main-banners-item">
-					<h2>Шоколадки даром!</h2>
-					<p>
-						При покупке 2кг пломбира, добавим в ваш заказ упаковку вкуснейшей шоколадной присыпки абсолютно бесплатно.
-					</p>
-					<a class="btn">Хочу шоколадки!</a>
-				</div>
-			</section>
-			<section class="main-hits">
-				<article class="main-hits-item">
-					<img class="hits-item-hit" src="" width="" height="" alt="хит">
-					<img src="" width="" height="" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
-					<span>310 р/кг</span>
-					<h4>
-						<a href="#">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
-					</h4>
-				</article>
-				<article class="main-hits-item">
-					<img class="hits-item-hit" src="" width="" height="" alt="хит">
-					<img src="" width="" height="" alt="Сливочно-кофейное с кусочками шоколада">
-					<span>380 р/кг</span>
-					<h4>
-						<a href="#">Сливочно-кофейное с кусочками шоколада</a>
-					</h4>
-				</article>
-				<article class="main-hits-item">
-                    <img class="hits-item-hit" src="" width="" height="" alt="хит"> 
+    <header class="main-header">
+        <div class="logo">
+            <img src="" width="" height="" alt="logo">
+        </div>
+        <nav class="main-navigation">
+            <ul>
+                <li>
+                    <a href="#">Каталог</a>
+                </li>
+                <li>
+                    <a href="#">Доставка и оплата</a>
+                </li>
+                <li>
+                    <a href="#">О компании</a>
+                </li>
+            </ul>
+        </nav>
+        <div class="user-block">
+            <div class="user-block-search">
+                <a class="btn-search" href="#">Поиск</a>
+            </div>
+            <div class="user-block-login">
+                <a class="btn-login" href="#">Вход</a>
+            </div>
+            <div class="user-block-cart">
+                <a class="btn-cart" href="#">Пусто</a>
+            </div>
+        </div>
+    </header>
+    <main>
+        <div class="container">
+            <div class="work-info">
+                <div>с 10 до 20, ежедневно</div>
+                <div>8 812 450-25-25</div>
+            </div>
+            <section class="main-banner">
+                <div class="main-banner-slide">
+                    <div>Крем-брюле и пломбир с малиновым джемом</div>
+                    <a class="main-banner-btn" href="#">Давайте оба!</a>
+                </div>
+                <div class="main-banner-slide">
+                    <div>Крем-брюле и пломбир с малиновым джемом</div>
+                    <a class="main-banner-btn" href="#">Давайте оба!</a>
+                </div>
+                <div class="main-banner-slide">
+                    <div>Крем-брюле и пломбир с малиновым джемом</div>
+                    <a class="main-banner-btn" href="#">Давайте оба!</a>
+                </div>
+                <div class="main-banner-buttons">
+                    <span id="main-banner-btn1 main-banner-btn-active"></span>
+                    <span id="main-banner-btn2"></span>
+                    <span id="main-banner-btn3"></span>
+                </div>
+            </section>
+            <section class="main-banners">
+                <div class="main-banners-item">
+                    <h2>Малинка даром!</h2>
+                    <p>
+                        При покупке 2кг любого фруктового мороженого, добавим в ваш заказ банку малинового варенья бесплатно.
+                    </p>
+                    <a class="btn">Хочу варенье!</a>
+                </div>
+                <div class="main-banners-item">
+                    <h2>Шоколадки даром!</h2>
+                    <p>
+                        При покупке 2кг пломбира, добавим в ваш заказ упаковку вкуснейшей шоколадной присыпки абсолютно бесплатно.
+                    </p>
+                    <a class="btn">Хочу шоколадки!</a>
+                </div>
+            </section>
+            <section class="main-hits">
+                <article class="main-hits-item">
+                    <img src="" width="" height="" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
+                    <span>310 р/кг</span>
+                    <div class="hits-item-link-wrapper">
+                        <a href="#">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
+                    </div>
+                </article>
+                <article class="main-hits-item">
+                    <img src="" width="" height="" alt="Сливочно-кофейное с кусочками шоколада">
+                    <span>380 р/кг</span>
+                    <div class="hits-item-link-wrapper">
+                        <a href="#">Сливочно-кофейное с кусочками шоколада</a>
+                    </div>
+                </article>
+                <article class="main-hits-item">
                     <img src="" width="" height="" alt="Сливочно-клубничное с присыпкой из белого шоколада">
                     <span>355 р/кг</span>
-                    <h4>
+                    <div class="hits-item-link-wrapper">
                         <a href="#">Сливочно-клубничное с присыпкой из белого шоколада</a>
-                    </h4>
-				</article>
-				<article class="main-hits-item">
-                    <img class="hits-item-hit" src="" width="" height="" alt="хит">
+                    </div>
+                </article>
+                <article class="main-hits-item">
                     <img src="" width="" height="" alt="Сливочное крем-брюле с карамельной подливкой">
                     <span>415 р/кг</span>
-                    <h4>
+                    <div class="hits-item-link-wrapper">
                         <a href="#">Сливочное крем-брюле с карамельной подливкой</a>
-                    </h4>
-				</article>
-			</section><!--.main-hits-->
-			<article class="main-content">
-				<p>
-					Магазин Глейси — это онлайн и офлайн магазин по продаже мороженого собственного производства на развес
-				</p>
-				<div class="main-content-left">
-					<p>
-						Все наше мороженое изготавливается на собственном производстве, с использованием современного оборудования и проверенных
-						временем технологий.
-					</p>
-					<p>
-						Для приготовления мороженого используются настоящие сливки и молоко высочайшего качества. Все дополнительные ингредиенты
-						и добавки произведены из натурального, экологически чистого сырья.
-					</p>
-				</div>
-				<div class="main-content-right">
-					<p>
-						Закупка ингредиентов производится только у проверенных фермерских хозяйств и компаний, с которыми нас связывает долговременное
-						сотрудничество.
-					</p>
-					<p>
-						Доставка нашего мороженого до заказчиков осуществляется в специальном термопаке, который не дает мороженому растаять в пути
-						и позволяет ему сохранить свой превосходный вкус.
-					</p>
-				</div>
-			</article><!--.main-content-->
-			<section class="main-news">
-				<div class="main-news-newpost">
-					<p>Новое в нашем блоге</p>
-					<a href="#">10 способов сервировки фруктовых щербетов</a>
-				</div>
-				<div class="main-news-newsletter">
-					<p>
-						Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить
-						и не слать всякой не нужной ерунды. Честно =)
-					</p>
-					<form action="#" method="post">
-						<input type="email" placeholder="Элекронная почта">
-						<button class="btn" type="submit">Отправить</button>
-					</form>
-				</div>
-			</section>
-		</div><!--.container-->
-		<div class="map">
-			<img src="" width="" height="" alt="Как добраться">
-			<div class="map-info">
-				<p>
-					Адрес главного офиса и<br> офлайн магазина:<br>
-					<b>
-                            ул. Большая Конюшенная 19/8,Санкт-Петербург
-                        </b>
-				</p>
-				<p>
-					Для заказов по телефону:<br>
-					<b>8 812 450-25-25</b><br> (с 10 до 20 ежедневно)
-				</p>
-			</div>
-		</div>
-	</main>
-	<footer class="main-footer">
-		<section class="main-footer-social">
-			<a class="social-btn social-btn-twiiter" href="#"></a>
-			<a class="social-btn social-btn-instagram" href="#"></a>
-			<a class="social-btn social-btn-facebook" href="#"></a>
-			<a class="social-btn social-btn-vkontakte" href="#"></a>
-		</section>
-		<section class="main-footer-about">
-			<a href="#">Для поставщиков</a>
-			<a href="#">О производстве</a>
-		</section>
-		<section class="main-footer-documents">
-			<a href="#">Наши документы</a>
-			<a href="#">Экологические стандарты</a>
-		</section>
-		<section class="main-footer-copyright">
-			<img src="" height="" width="" alt="HTML academy logo">
-			<div>Сделано в <a href="#">HTML academy</a> &copy; 2016</div>
-		</section>
-	</footer>
+                    </div>
+                </article>
+            </section><!--.main-hits-->
+            <article class="main-content">
+                <p>
+                    Магазин Глейси — это онлайн и офлайн магазин по продаже мороженого собственного производства на развес
+                </p>
+                <div class="main-content-left">
+                    <p>
+                        Все наше мороженое изготавливается на собственном производстве, с использованием современного оборудования и проверенных
+                        временем технологий.
+                    </p>
+                    <p>
+                        Для приготовления мороженого используются настоящие сливки и молоко высочайшего качества. Все дополнительные ингредиенты
+                        и добавки произведены из натурального, экологически чистого сырья.
+                    </p>
+                </div>
+                <div class="main-content-right">
+                    <p>
+                        Закупка ингредиентов производится только у проверенных фермерских хозяйств и компаний, с которыми нас связывает долговременное
+                        сотрудничество.
+                    </p>
+                    <p>
+                        Доставка нашего мороженого до заказчиков осуществляется в специальном термопаке, который не дает мороженому растаять в пути
+                        и позволяет ему сохранить свой превосходный вкус.
+                    </p>
+                </div>
+            </article><!--.main-content-->
+            <section class="main-news">
+                <div class="main-news-newpost">
+                    <p>Новое в нашем блоге</p>
+                    <a href="#">10 способов сервировки фруктовых щербетов</a>
+                </div>
+                <div class="main-news-newsletter">
+                    <p>
+                        Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить
+                        и не слать всякой не нужной ерунды. Честно =)
+                    </p>
+                    <form action="#" method="post">
+                        <input type="email" placeholder="Элекронная почта">
+                        <button class="btn" type="submit">Отправить</button>
+                    </form>
+                </div>
+            </section>
+        </div><!--.container-->
+        <div class="map">
+            <img src="" width="" height="" alt="Как добраться">
+            <div class="map-info">
+                <p>
+                    Адрес главного офиса и<br> офлайн магазина:<br>
+                    <b>ул. Большая Конюшенная 19/8,Санкт-Петербург</b>
+                </p>
+                <p>
+                    Для заказов по телефону:<br>
+                    <b>8 812 450-25-25</b><br> (с 10 до 20 ежедневно)
+                </p>
+            </div>
+        </div>
+    </main>
+    <footer class="main-footer">
+        <section class="main-footer-social">
+            <a class="social-btn social-btn-twitter" href="#">Twitter</a>
+            <a class="social-btn social-btn-instagram" href="#">Instagram</a>
+            <a class="social-btn social-btn-facebook" href="#">Facebook</a>
+            <a class="social-btn social-btn-vkontakte" href="#">Vkontakte</a>
+        </section>
+        <section class="main-footer-about">
+            <a href="#">Для поставщиков</a>
+            <a href="#">О производстве</a>
+        </section>
+        <section class="main-footer-documents">
+            <a href="#">Наши документы</a>
+            <a href="#">Экологические стандарты</a>
+        </section>
+        <section class="main-footer-copyright">
+            <img src="" height="" width="" alt="HTML academy logo">
+            <div>Сделано в <a href="#">HTML academy</a> &copy; 2016</div>
+        </section>
+    </footer>
 </body>
 
 </html>
