--- a/catalog.html
+++ b/catalog.html
@@ -4,12 +4,13 @@
 <head>
     <meta charset="utf-8">
     <title>Gllacy catalog</title>
+    <link rel="stylesheet" src="css/style.css">
 </head>
 
 <body>
     <header class="main-header">
         <div class="logo">
-            <img src="" width="" height="" alt="logo">
+            <img src="img/menu-logo.png" width="154" height="64" alt="logo">
         </div>
         <nav class="main-navigation">
             <ul>
@@ -98,84 +99,84 @@
         </form>
         <section class="catalog-list">
             <article class="catalog-hits-item">
-                <img src="" width="" height="" alt="Сливочное с апельсиновым джемом и цитрусовй стружкой">
+                <img src="img/catalog-item-1.png" width="200" height="200" alt="Сливочное с апельсиновым джемом и цитрусовй стружкой">
                 <span>310 р/кг</span>
                 <div class="hits-item-link-wrapper">
                     <a href="#">Сливочное с апельсиновым джемом и цитрусовй стружкой</a>
                 </div>
             </article>
             <article class="catalog-hits-item">
-                <img src="" width="" height="" alt="Сливочно-кофейное с кусочками шоколада">
+                <img src="img/catalog-item-2.png" width="200" height="200" alt="Сливочно-кофейное с кусочками шоколада">
                 <span>380 р/кг</span>
                 <div class="hits-item-link-wrapper">
                     <a href="#">Сливочно-кофейное с кусочками шоколада</a>
                 </div>
             </article>
             <article class="catalog-hits-item">
-                <img src="" width="" height="" alt="Сливочно-клубничное с присыпкой из белого шоколада">
+                <img src="img/catalog-item-3.png" width="200" height="200" alt="Сливочно-клубничное с присыпкой из белого шоколада">
                 <span>355 р/кг</span>
                 <div class="hits-item-link-wrapper">
                     <a href="#">Сливочно-клубничное с присыпкой из белого шоколада</a>
                 </div>
             </article>
             <article class="catalog-hits-item">
-                <img src="" width="" height="" alt="Сливочное крем-брюле с карамельной подливкой">
+                <img src="img/catalog-item-4.png" width="200" height="200" alt="Сливочное крем-брюле с карамельной подливкой">
                 <span>415 р/кг</span>
                 <div class="hits-item-link-wrapper">
                     <a href="#">Сливочное крем-брюле с карамельной подливкой</a>
                 </div>
             </article>
             <article class="catalog-hits-item">
-                <img src="" width="" height="" alt="Сливочное с брусничным джемом">
+                <img src="img/catalog-item-5.png" width="200" height="200" alt="Сливочное с брусничным джемом">
                 <span>325 р/кг</span>
                 <div class="hits-item-link-wrapper">
                     <a href="#">Сливочное с брусничным джемом</a>
                 </div>
             </article>
             <article class="catalog-hits-item">
-                <img src="" width="" height="" alt="Сливочно-черничное с цельными ягодами черники">
+                <img src="img/catalog-item-6.png" width="200" height="200" alt="Сливочно-черничное с цельными ягодами черники">
                 <span>410 р/кг</span>
                 <div class="hits-item-link-wrapper">
                     <a href="#">Сливочно-черничное с цельными ягодами черники</a>
                 </div>
             </article>
             <article class="catalog-hits-item">
-                <img src="" width="" height="" alt="Сливочно-лимонное с карамельной присыпкой">
+                <img src="img/catalog-item-7.png" width="200" height="200" alt="Сливочно-лимонное с карамельной присыпкой">
                 <span>375 р/кг</span>
                 <div class="hits-item-link-wrapper">
                     <a href="#">Сливочно-лимонное с карамельной присыпкой</a>
                 </div>
             </article>
             <article class="catalog-hits-item">
-                <img src="" width="" height="" alt="Сливочное с шоколадной стружкой">
+                <img src="img/catalog-item-8.png" width="200" height="200" alt="Сливочное с шоколадной стружкой">
                 <span>325 р/кг</span>
                 <div class="hits-item-link-wrapper">
                     <a href="#">Сливочное с шоколадной стружкой</a>
                 </div>
             </article>
             <article class="catalog-hits-item">
-                <img src="" width="" height="" alt="Сливочно-ванильное с кусочками шоколада">
+                <img src="img/catalog-item-9.png" width="200" height="200" alt="Сливочно-ванильное с кусочками шоколада">
                 <span>440 р/кг</span>
                 <div class="hits-item-link-wrapper">
                     <a href="#">Сливочно-ванильное с кусочками шоколада</a>
                 </div>
             </article>
             <article class="catalog-hits-item">
-                <img src="" width="" height="" alt="Сливочное с ментоловым сиропом">
+                <img src="img/catalog-item-10.png" width="200" height="200" alt="Сливочное с ментоловым сиропом">
                 <span>435 р/кг</span>
                 <div class="hits-item-link-wrapper">
                     <a href="#">Сливочное с ментоловым сиропом</a>
                 </div>
             </article>
             <article class="catalog-hits-item">
-                <img src="" width="" height="" alt="Сливочное с кусочками чёрного шоколада">
+                <img src="img/catalog-item-11.png" width="200" height="200" alt="Сливочное с кусочками чёрного шоколада">
                 <span>355 р/кг</span>
                 <div class="hits-item-link-wrapper">
                     <a href="#">Сливочное с кусочками чёрного шоколада</a>
                 </div>
             </article>
             <article class="catalog-hits-item">
-                <img src="" width="" height="" alt="Сливочное с мятным сиропом">
+                <img src="img/catalog-item-12.png" width="200" height="200" alt="Сливочное с мятным сиропом">
                 <span>420 р/кг</span>
                 <div class="hits-item-link-wrapper">
                     <a href="#">Сливочное с мятным сиропом</a>
@@ -194,10 +195,18 @@
     </main>
     <footer class="main-footer">
         <section class="main-footer-social">
-            <a class="social-btn social-btn-twitter" href="#">Twitter</a>
-            <a class="social-btn social-btn-instagram" href="#">Instagram</a>
-            <a class="social-btn social-btn-facebook" href="#">Facebook</a>
-            <a class="social-btn social-btn-vkontakte" href="#">Vkontakte</a>
+            <a class="social-btn social-btn-twitter" href="#">
+                <img src="img/twitter-icon.png" width="33" height="32" alt="twitter">    
+            </a>
+            <a class="social-btn social-btn-instagram" href="#">
+                <img src="img/instagram-icon.png" width="32" height="32" alt="instagram">
+            </a>
+            <a class="social-btn social-btn-facebook" href="#">
+                <img src="img/facebook-icon.png" width="32" height="32" alt="facebook">
+            </a>
+            <a class="social-btn social-btn-vkontakte" href="#">
+                <img src="img/vkontakte-icon.png" width="32" height="32" alt="vkontakte">
+            </a>
         </section>
         <section class="main-footer-about">
             <a href="#">Для поставщиков</a>
@@ -208,7 +217,7 @@
             <a href="#">Экологические стандарты</a>
         </section>
         <section class="main-footer-copyright">
-            <img src="" height="" width="" alt="HTML academy logo">
+            <img src="img/htmlacademy-logo.png" height="108" width="38" alt="HTML academy logo">
             <div>Сделано в <a href="#">HTML academy</a> &copy; 2016</div>
         </section>
     </footer>
