--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
 <head>
     <meta charset="utf-8">
     <title>Gllacy</title>
+    <link rel="stylesheet" src="css/style.css">
 </head>
 
 <body>
     <header class="main-header">
         <div class="logo">
-            <img src="" width="" height="" alt="logo">
+            <img src="img/menu-logo.png" width="154" height="64" alt="logo">
         </div>
         <nav class="main-navigation">
             <ul>
@@ -44,15 +45,18 @@
             </div>
             <section class="main-banner">
                 <div class="main-banner-slide">
+                    <img src="img/slider-item-1.png" width="647" height="584" alt="Крем-брюле и пломбир с малиновым джемом">
                     <div>Крем-брюле и пломбир с малиновым джемом</div>
                     <a class="main-banner-btn" href="#">Давайте оба!</a>
                 </div>
                 <div class="main-banner-slide">
-                    <div>Крем-брюле и пломбир с малиновым джемом</div>
+                    <img src="img/slider-item-2.png" width="647" height="584" alt="Шоколадный пломбир и лимонный сорбет">
+                    <div>Шоколадный пломбир и лимонный сорбет</div>
                     <a class="main-banner-btn" href="#">Давайте оба!</a>
                 </div>
                 <div class="main-banner-slide">
-                    <div>Крем-брюле и пломбир с малиновым джемом</div>
+                    <img src="img/slider-item-3.png" width="647" height="584" alt="Пломбир с помадкой и клубничный щербет">
+                    <div>Пломбир с помадкой и клубничный щербет</div>
                     <a class="main-banner-btn" href="#">Давайте оба!</a>
                 </div>
                 <div class="main-banner-buttons">
@@ -79,28 +83,28 @@
             </section>
             <section class="main-hits">
                 <article class="main-hits-item">
-                    <img src="" width="" height="" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
+                    <img src="hit-item-1.png" width="200" height="200" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
                     <span>310 р/кг</span>
                     <div class="hits-item-link-wrapper">
                         <a href="#">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
                     </div>
                 </article>
                 <article class="main-hits-item">
-                    <img src="" width="" height="" alt="Сливочно-кофейное с кусочками шоколада">
+                    <img src="hit-item-2.png" width="200" height="200" alt="Сливочно-кофейное с кусочками шоколада">
                     <span>380 р/кг</span>
                     <div class="hits-item-link-wrapper">
                         <a href="#">Сливочно-кофейное с кусочками шоколада</a>
                     </div>
                 </article>
                 <article class="main-hits-item">
-                    <img src="" width="" height="" alt="Сливочно-клубничное с присыпкой из белого шоколада">
+                    <img src="hit-item-3.png" width="200" height="200" alt="Сливочно-клубничное с присыпкой из белого шоколада">
                     <span>355 р/кг</span>
                     <div class="hits-item-link-wrapper">
                         <a href="#">Сливочно-клубничное с присыпкой из белого шоколада</a>
                     </div>
                 </article>
                 <article class="main-hits-item">
-                    <img src="" width="" height="" alt="Сливочное крем-брюле с карамельной подливкой">
+                    <img src="hit-item-4.png" width="200" height="200" alt="Сливочное крем-брюле с карамельной подливкой">
                     <span>415 р/кг</span>
                     <div class="hits-item-link-wrapper">
                         <a href="#">Сливочное крем-брюле с карамельной подливкой</a>
@@ -150,7 +154,7 @@
             </section>
         </div><!--.container-->
         <div class="map">
-            <img src="" width="" height="" alt="Как добраться">
+            <img src="img/map-with-pin.jpg" width="900" height="430" alt="Как добраться">
             <div class="map-info">
                 <p>
                     Адрес главного офиса и<br> офлайн магазина:<br>
@@ -165,10 +169,18 @@
     </main>
     <footer class="main-footer">
         <section class="main-footer-social">
-            <a class="social-btn social-btn-twitter" href="#">Twitter</a>
-            <a class="social-btn social-btn-instagram" href="#">Instagram</a>
-            <a class="social-btn social-btn-facebook" href="#">Facebook</a>
-            <a class="social-btn social-btn-vkontakte" href="#">Vkontakte</a>
+            <a class="social-btn social-btn-twitter" href="#">
+                <img src="img/twitter-icon.png" width="33" height="32" alt="twitter">    
+            </a>
+            <a class="social-btn social-btn-instagram" href="#">
+                <img src="img/instagram-icon.png" width="32" height="32" alt="instagram">
+            </a>
+            <a class="social-btn social-btn-facebook" href="#">
+                <img src="img/facebook-icon.png" width="32" height="32" alt="facebook">
+            </a>
+            <a class="social-btn social-btn-vkontakte" href="#">
+                <img src="img/vkontakte-icon.png" width="32" height="32" alt="vkontakte">
+            </a>
         </section>
         <section class="main-footer-about">
             <a href="#">Для поставщиков</a>
@@ -179,7 +191,7 @@
             <a href="#">Экологические стандарты</a>
         </section>
         <section class="main-footer-copyright">
-            <img src="" height="" width="" alt="HTML academy logo">
+            <img src="img/htmlacademy-logo.png" height="108" width="38" alt="HTML academy logo">
             <div>Сделано в <a href="#">HTML academy</a> &copy; 2016</div>
         </section>
     </footer>
