Bugfix: 1. change id with class attribute 2. use inline-block to avoid line break with large text inside link

--- a/catalog.html
+++ b/catalog.html
@@ -11,7 +11,7 @@
     <header class="main-header">
         <div class="container clearfix">
             <div class="logo">
-                <img src="img/menu-logo.png" width="154" height="64" alt="logo">
+                <img src="img/menu-logo.png" width="154" height="64" alt="gllacy">
             </div>
             <nav class="main-navigation">
                 <ul>
@@ -146,8 +146,7 @@
                 <img src="img/catalog-item-6.png" width="200" height="200" alt="Сливочно-черничное с цельными ягодами черники">
                 <span>410 р/кг</span>
                 <div class="hits-item-link-wrapper">
-                    <!--<a href="#">Сливочно-черничное с цельными ягодами черники</a>-->
-                    <a href="#">Сливочно-черничное</a>
+                    <a href="#">Сливочно-черничное с цельными ягодами черники</a>
                 </div>
             </article>
             <article class="catalog-hits-item">
