--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header class="main-header">
         <div class="container clearfix">
             <div class="logo">
-                <img src="img/menu-logo.png" width="154" height="64" alt="logo">
+                <img src="img/menu-logo.png" width="154" height="64" alt="gllacy">
             </div>
             <nav class="main-navigation">
                 <ul>
@@ -62,9 +62,9 @@
                     <a class="main-banner-btn" href="#">Давайте оба!</a>
                 </div>
                 <div class="main-banner-buttons">
-                    <span id="main-banner-btn1 main-banner-btn-active"></span>
-                    <span id="main-banner-btn2"></span>
-                    <span id="main-banner-btn3"></span>
+                    <span class="main-banner-btn1 main-banner-btn-active"></span>
+                    <span class="main-banner-btn2"></span>
+                    <span class="main-banner-btn3"></span>
                 </div>
             </section>
             <section class="main-banners clearfix">
