Bugfix: 1. Replace span with a tag for slider 2. Add hover images 3. Add sprite

--- a/catalog.html
+++ b/catalog.html
@@ -204,18 +204,10 @@
     </main>
     <footer class="main-footer container clearfix">
         <section class="main-footer-social">
-            <a class="social-btn social-btn-twitter" href="#">
-                <img src="img/twitter-icon.png" width="33" height="32" alt="twitter">    
-            </a>
-            <a class="social-btn social-btn-instagram" href="#">
-                <img src="img/instagram-icon.png" width="32" height="32" alt="instagram">
-            </a>
-            <a class="social-btn social-btn-facebook" href="#">
-                <img src="img/facebook-icon.png" width="32" height="32" alt="facebook">
-            </a>
-            <a class="social-btn social-btn-vkontakte" href="#">
-                <img src="img/vkontakte-icon.png" width="32" height="32" alt="vkontakte">
-            </a>
+            <a class="social-btn social-btn-twitter" href="#">Twitter</a>
+            <a class="social-btn social-btn-instagram" href="#">Instagram</a>
+            <a class="social-btn social-btn-facebook" href="#">Facebook</a>
+            <a class="social-btn social-btn-vkontakte" href="#">Vkontakte</a>
         </section>
         <section class="main-footer-about">
             <a href="#">Для поставщиков</a>
