--- a/catalog.html
+++ b/catalog.html
@@ -70,52 +70,55 @@
         </div>
         <h1>Сливочное мороженое</h1>
         <form class="filter-form" action="#" name="filterForm" method="get">
-            <div class="clearfix">
-                <fieldset class="filter-group-sort">
-                    <legend>Сортировка</legend>
-                    <select name="sort">
+            <fieldset class="filter-item filter-group-sort">
+                <legend class="filter-title">Сортировка</legend>
+                <div class="filter-select-field">
+                    <select class="filter-select" name="sort">
                         <option value="popularity" selected>по популярности</option>
                         <option value="cheapfirst">сначала недорогие</option>
                         <option value="expensivefirst">сначала дорогие</option>
                         <option value="fatness">по жирности</option>
                     </select>
-                </fieldset>
-                <fieldset class="filter-group-range">
-                    <legend>Цена: 100 руб. — 500 руб.</legend>
-                    <div class="filter-group-range-content">
-                        <div class="price-controls">
-                            <input type="text" name="minPrice" value="100" hidden>
-                            <input type="text" name="maxPrice" value="500" hidden>
-                        </div>
-                        <div class="range-controls">
-                            <div class="range-controls-scale">
-                                <div class="range-controls-filled-range"></div>
+                    <span class="filter-select-arrow"></span>
+                </div>
+            </fieldset>
+            <fieldset class="filter-item filter-group-range">
+                <legend class="filter-title">Цена: 100 руб. — 500 руб.</legend>
+                <div class="filter-range-field">
+                    <div class="price-values">
+                        <input type="text" name="minPrice" value="100" hidden>
+                        <input type="text" name="maxPrice" value="500" hidden>
+                    </div>
+                    <div class="price-controls">
+                        <div class="price-controls-scale">
+                            <div class="price-controls-bar">
+                                <div class="price-controls-btn price-controls-min"></div>
+                                <div class="price-controls-btn price-controls-max"></div>
                             </div>
-                            <div class="range-controls-toggle range-controls-toggle-min"></div>
-                            <div class="range-controls-toggle range-controls-toggle-max"></div>
                         </div>
                     </div>
-                </fieldset>
-                <fieldset class="filter-group-fatness">
-                    <legend>Жирность:</legend>
-                    <input type="radio" name="fatness" id="fatness-field-0" value="0"><label for="fatness-field-0">0%</label>
-                    <input type="radio" name="fatness" id="fatness-field-10" value="10"><label for="fatness-field-10">до 10%</label>
-                    <input type="radio" name="fatness" id="fatness-field-30" value="30"><label for="fatness-field-30">до 30%</label>
-                    <input type="radio" name="fatness" id="fatness-field-100" value="100"><label for="fatness-field-100">выше 30%</label>
-                </fieldset>
-            </div>
-            <div class="clearfix">
-                <fieldset class="filter-group-filler">
-                    <legend>Наполнители:</legend>
-                    <input type="checkbox" name="chocolate" value="chocolate" id="chocolate-field" checked><label for="chocolate-field">Шоколадные</label>
-                    <input type="checkbox" name="sugar" value="sugar" id="sugar-field" checked><label for="sugar-field">Сахарные присыпки</label>
-                    <input type="checkbox" name="fruit" value="fruit" id="fruit-field"><label for="fruit-field">Фрукты</label>
-                    <input type="checkbox" name="syrup" value="syrup" id="syrup-field"><label for="syrup-field">Сиропы</label>
-                    <input type="checkbox" name="jam" value="jam" id="jam-field"><label for="jam-field">Джемы</label>
-                </fieldset>
-                <button class="filter-group-btnsubmit" type="submit">Применить</button>
-                <!--<span class="filter-group-btnsubmit">Apply</span>-->
-            </div>
+                </div>
+            </fieldset>
+            <fieldset class="filter-item filter-group-fatness">
+                <legend class="filter-title">Жирность:</legend>
+                <div class="filter-radio-field">
+                    <label class="filter-radio"><input type="radio" name="fatness" id="fatness-field-0" value="0"><span class="filter-radio-indicator"></span>0%</label>
+                    <label class="filter-radio"><input type="radio" name="fatness" id="fatness-field-10" value="10"><span class="filter-radio-indicator"></span>до 10%</label>
+                    <label class="filter-radio"><input type="radio" name="fatness" id="fatness-field-30" value="30"><span class="filter-radio-indicator"></span>до 30%</label>
+                    <label class="filter-radio"><input type="radio" name="fatness" id="fatness-field-100" value="100"><span class="filter-radio-indicator"></span>выше 30%</label>
+                </div>
+            </fieldset>
+            <fieldset class="filter-item filter-group-filler">
+                <legend class="filter-title">Наполнители:</legend>
+                <div class="filter-checkbox-field">
+                    <label class="filter-checkbox"><input type="checkbox" name="chocolate" value="chocolate" id="chocolate-field" checked><span class="filter-checkbox-indicator"></span>Шоколадные</label>
+                    <label class="filter-checkbox"><input type="checkbox" name="sugar" value="sugar" id="sugar-field" checked><span class="filter-checkbox-indicator"></span>Сахарные присыпки</label>
+                    <label class="filter-checkbox"><input type="checkbox" name="fruit" value="fruit" id="fruit-field"><span class="filter-checkbox-indicator"></span>Фрукты</label>
+                    <label class="filter-checkbox"><input type="checkbox" name="syrup" value="syrup" id="syrup-field"><span class="filter-checkbox-indicator"></span>Сиропы</label>
+                    <label class="filter-checkbox"><input type="checkbox" name="jam" value="jam" id="jam-field"><span class="filter-checkbox-indicator"></span>Джемы</label>
+                </div>
+            </fieldset>
+            <button class="filter-btnsubmit" type="submit">Применить</button>
         </form>
         <section class="catalog-list clearfix">
             <article class="catalog-hits-item hits-item">
