--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                             <a href="#">Каталог</a>
                             <ul class="sub-menu">
                                 <li><span class="sub-menu-title">Новинки</span></li>
-                                <li><a href="index.html">Сливочное</a></li>
+                                <li><a href="catalog.html">Сливочное</a></li>
                                 <li><span class="active" >Щербеты</li>
                                 <li><a href="#">Фруктовый лёд</a></li>
                                 <li><a href="#">Мелорин</a></li>
